tests/fixtures/invalid/bool_gt_list.py
# Cannot compare with > Bool and List[int]
x: bool = True > [1, 2, 3]
